--- a/WarAndPeace.ipynb
+++ b/WarAndPeace.ipynb
@@ -85,6 +85,7 @@
       },
       "cell_type": "code",
       "source": [
+        "##war-and-peace.txt c:\\downloads\n",
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
@@ -135,16 +136,6 @@
       ],
       "execution_count": 0,
       "outputs": []
-    },
-    {
-      "metadata": {
-        "id": "BLLL7BNpEBfQ",
-        "colab_type": "text"
-      },
-      "cell_type": "markdown",
-      "source": [
-        ""
-      ]
     },
     {
       "metadata": {
@@ -200,6 +191,62 @@
     },
     {
       "metadata": {
+        "id": "-ykASuE-B6Up",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "RDD\n",
+        "\n",
+        "Parallelized Collections\n",
+        "\n",
+        "Parallelized collections are created by calling SparkContext’s parallelize method on an existing iterable or collection in your driver program. The elements of the collection are copied to form a distributed dataset that can be operated on in parallel. For example, here is how to create a parallelized collection holding the numbers 1 to 5:\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "KPGqN9wSB3tG",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "74eab59a-3e1a-49f6-c5d5-00a7b682f2ed"
+      },
+      "cell_type": "code",
+      "source": [
+        "data = [1, 2, 3, 4, 5]\n",
+        "distData = sc.parallelize(data)\n",
+        "distData.filter(lambda x: x % 2 == 0).collect()"
+      ],
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[2, 4]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "BLLL7BNpEBfQ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        ""
+      ]
+    },
+    {
+      "metadata": {
         "id": "mrrdqCe_F0Q0",
         "colab_type": "code",
         "colab": {
@@ -210,6 +257,7 @@
       },
       "cell_type": "code",
       "source": [
+        "#data.txt from c:\\downloads or where ever you have the file\n",
         "from google.colab import files\n",
         "newuploaded = files.upload()"
       ],
@@ -292,9 +340,7 @@
       },
       "cell_type": "code",
       "source": [
-        "data = [1, 2, 3, 4, 5]\n",
-        "distData = sc.parallelize(data)\n",
-        "distData.filter(lambda x: x % 2 == 0).collect()"
+        ""
       ],
       "execution_count": 29,
       "outputs": [
